--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tender Protector – Erotic Blueprint</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #1a1a1a;
@@ -13,34 +13,29 @@
       margin: 0;
       padding: 2rem;
       border: 8px solid #064D95;
-      box-shadow: 0 0 10px #064D95;
+      box-shadow: 0 0 15px #064D95;
+    }
+
+    .logo {
+      max-width: 120px;
+      margin: 20px auto 10px;
+      display: block;
     }
 
     h1 {
       font-style: italic;
-      color: #064D95;
+      color: #57b9ff;
       text-align: center;
-      font-size: 2.8rem;
-      text-shadow: 0 0 8px #064D95;
-      margin-top: 1rem;
-    }
-
-    .logo-container {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 1rem;
-    }
-
-    .logo-container img {
-      height: 60px;
+      font-size: 2.5rem;
+      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
+      margin-bottom: 0.5rem;
     }
 
     .slogan {
       font-style: italic;
       text-align: center;
-      font-size: 1.3rem;
-      margin-top: -1rem;
-      margin-bottom: 0.5rem;
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
       color: #ccc;
     }
 
@@ -51,31 +46,35 @@
       margin-bottom: 2rem;
     }
 
-    .images-container {
+    .image-container {
+      border: 4px solid #064D95;
+      border-radius: 12px;
+      overflow: hidden;
       display: flex;
       justify-content: center;
-      align-items: center;
-      gap: 8px;
-      margin: 2rem 0;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+      box-shadow: 0 0 12px #064D95;
     }
 
-    .image-wrapper {
-      border: 4px solid #064D95;
-      padding: 0;
-      box-shadow: 0 0 10px #064D95;
-      background-color: #111;
+    .image-half {
+      flex: 1;
     }
 
-    .image-wrapper img {
+    .image-half img {
       display: block;
-      width: 250px;
-      height: auto;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
     }
 
     .divider {
       width: 4px;
       background-color: #064D95;
-      box-shadow: 0 0 10px #064D95;
     }
 
     .content-section {
@@ -83,58 +82,55 @@
     }
 
     .content-section h2 {
-      font-size: 1.8rem;
-      margin-top: 2rem;
-      color: #ffffff;
+      font-size: 1.6rem;
+      color: #57b9ff;
       border-bottom: 2px solid #064D95;
       padding-bottom: 0.3rem;
-    }
-
-    .content-section ul {
-      padding-left: 1.2rem;
-    }
-
-    .content-section li {
       margin-bottom: 0.5rem;
     }
 
-    .italic {
-      font-style: italic;
+    .content-section p,
+    .content-section ul {
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #eee;
     }
 
-    p {
-      line-height: 1.6;
+    ul {
+      padding-left: 1.2rem;
     }
+
+    li {
+      margin-bottom: 0.5rem;
+    }
+
   </style>
 </head>
 <body>
 
-  <div class="logo-container">
-    <img src="/golden-le-libido-logo.png" alt="Le Libido Logo">
-  </div>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
 
   <h1>Tender Protector</h1>
   <p class="slogan">You lead with gravity, not volume.</p>
   <p class="quote">“The deepest pleasure doesn’t come from control. It comes from being trusted with it.” – Anonymous</p>
 
-  <div class="images-container">
-    <div class="image-wrapper">
+  <div class="image-container">
+    <div class="image-half">
       <img src="/images/tender_protector_female.jpg" alt="Tender Protector Female">
     </div>
     <div class="divider"></div>
-    <div class="image-wrapper">
+    <div class="image-half">
       <img src="/images/tender_protector_male.jpg" alt="Tender Protector Male">
     </div>
   </div>
+    <div class="content-section">
+    <h2>Description</h2>
+    <p>You lead with grace, grounding those around you. You’re the kind of partner others surrender to not out of fear, but trust. You’re not just in charge, you’re responsible. When you lead, people feel held, not handled. In dominance psychology, this is called secure authority. You don’t control people, you create space for them to feel free.</p>
+  </div>
 
   <div class="content-section">
-    <h2>Description</h2>
-    <p>You lead with grace, grounding those around you. You’re the kind of partner others surrender to not out of fear, but trust. You’re not just in charge, you’re responsible. When you lead, people feel held, not handled. In dominance psychology, this is called secure authority—you don’t control people, you create space for them to feel free.</p>
-  </div>
-    <div class="content-section">
     <h2>Power Dynamic Arc</h2>
-    <p><strong>Relationship Trajectory:</strong><br>
-    Tender Protectors are stable dominants. Their leadership is grounded in emotional attunement rather than ego. They are least likely to initiate polarity shifts unless it’s to recalibrate for the sake of their partner’s well-being.</p>
+    <p><strong>Relationship Trajectory:</strong></p>
     <ul>
       <li>Dominant stays dominant → 📈 Stable upward trend</li>
       <li>Healthy, long-term dynamic. Emotional security and trust deepen over time.</li>
@@ -246,7 +242,10 @@
     <p>They’re already desperate for more. Already flushed. You don’t need to check. You feel it in their breath. In the way their thighs press together.</p>
     <p>Your fingers move slowly, spreading warmth with every stroke. You’re not rushing to get them off. You’re teaching their body something. Showing them what it means to be handled. To be cared for. To be devoured gently, completely, and without apology.</p>
     <p>They start to shake a little. You murmur praise into their neck, soft affirmations between kisses.</p>
-    <p>You tell them what a good job they’re doing. How much you love watching them fall apart for you. How safe they are. How hot they are like this.</p>
+    <p>You tell them what a good job they’re doing.</p>
+    <p>How much you love watching them fall apart for you.</p>
+    <p>How safe they are.</p>
+    <p>How hot they are like this.</p>
     <p>You feel them build under your touch. Their hips rock up. Their hands grip the sheets, or your arms, or your back. They moan, quiet but desperate, and you meet every sound with calm control.</p>
     <p>When they come, they come hard. Their body curls under yours, and you hold them through it, never letting them drift. Never leaving space for doubt or shame to slip in.</p>
     <p>You stay close. You kiss their shoulder. You stroke their hair. You let the afterglow stretch long.</p>
@@ -255,9 +254,14 @@
     <p>They hum. You feel them smile. You don’t need more than that.</p>
     <p>They came undone for you. Trusted you to take them apart and put them back together without breaking anything that matters.</p>
     <p>And you did.</p>
-    <p>That’s what you do best. Not just take control. Not just lead. You protect.</p>
-    <p>Even when you’re making them moan. Even when you’re causing them to squirm in ecstasy. Even when they’re at their most exposed.</p>
-    <p>Especially then. Because that’s when it matters most.</p>
+    <p>That’s what you do best.</p>
+    <p>Not just take control. Not just lead.</p>
+    <p>You protect.</p>
+    <p>Even when you’re making them moan.</p>
+    <p>Even when you’re causing them to squirm in ecstasy.</p>
+    <p>Even when they’re at their most exposed.</p>
+    <p>Especially then.</p>
+    <p>Because that’s when it matters most.</p>
   </div>
 </body>
 </html>
