--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -2,81 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tender Protector – Erotic Blueprint</title>
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"/>
-
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --blue: #064D95;
-      --gold: #e1bf78;
-      --offWhite: #e6e6e6;
-    }
-
-    * { box-sizing: border-box; }
-    html, body { margin: 0; }
     body {
-      background-color: var(--blue);
-      color: var(--offWhite);
+      background-color: #064D95;
       font-family: 'Montserrat', sans-serif;
-      line-height: 1.55;
-      border: 8px solid var(--gold);
-      box-shadow: 0 0 10px var(--gold);
-    }
-
-    .wrapper {
-      padding: 2rem 1.1rem 3rem;
+      color: white;
+      margin: 0;
+      padding: 0 2rem 2rem;
+      border: 8px solid #e1bf78;
+      box-shadow: 0 0 10px #e1bf78;
     }
 
     .logo {
-      display: block;
       max-width: 120px;
-      margin: 0.5rem auto 1.3rem;
-      filter: drop-shadow(0 0 4px var(--gold));
+      margin: 0 auto 10px;
+      display: block;
     }
 
     h1 {
-      font-size: 2.7rem;
-      font-weight: 700;
       font-style: italic;
+      font-weight: bold;
+      color: white;
       text-align: center;
-      color: #fff;
+      font-size: 2.5rem;
       text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
-      margin: 0.2rem 0 0.8rem;
+      margin-top: 10px;
     }
 
-    h2 {
-      font-size: 1.6rem;
-      font-style: italic;
-      color: var(--gold);
-      margin: 2.4rem 0 0.6rem;
-      text-shadow: 0 0 4px var(--gold);
-    }
-
-    .slogan, .quote {
+    .slogan {
       font-style: italic;
       text-align: center;
-      color: #d2d2d2;
-      margin: 0.2rem 0 1.6rem;
+      font-size: 1.2rem;
+      margin: 0.5rem 0;
+      color: #d0d0d0;
     }
 
     .quote {
-      margin-top: -0.4rem;
+      color: #bbbbbb;
+      font-style: italic;
+      text-align: center;
+      margin-bottom: 2rem;
     }
 
     .image-container {
-      border: 4px solid var(--gold);
+      border: 4px solid #e1bf78;
       border-radius: 12px;
       overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: stretch;
       width: 100%;
-      max-width: 680px;
-      margin: 0 auto 2.2rem;
-      box-shadow: 0 0 7px var(--gold);
+      max-width: 700px;
+      margin: 0 auto 30px auto;
     }
 
     .image-half {
@@ -94,68 +74,82 @@
 
     .divider {
       width: 4px;
-      background-color: var(--gold);
+      background-color: #e1bf78;
     }
 
-    ul {
-      padding-left: 1.25rem;
-      margin: 0.6rem 0;
+    .content-section {
+      margin-bottom: 2rem;
     }
 
-    li {
-      margin-bottom: 0.45rem;
-    }
-
-    .sub {
-      margin-left: 0.8rem;
+    .content-section h2 {
+      font-size: 1.6rem;
       font-style: italic;
-      color: #c7c7c7;
+      color: #e1bf78;
+      margin-bottom: 0.5rem;
     }
 
-    .story p {
-      margin: 0 0 1.1rem;
+    .content-section ul {
+      padding-left: 1.5rem;
+    }
+
+    .content-section li {
+      margin-bottom: 0.5rem;
+    }
+
+    .indented {
+      padding-left: 1rem;
+      color: #dddddd;
+      font-style: italic;
     }
   </style>
 </head>
-
 <body>
-  <div class="wrapper">
-    <img src="/assets/le-libido-logo.svg" alt="Le Libido Logo" class="logo" />
-    <h1><strong><em>Tender Protector</em></strong></h1>
-    <p class="slogan">You lead with gravity, not volume.</p>
-    <p class="quote">“The deepest pleasure doesn’t come from control. It comes from being trusted with it.” – Anonymous</p>
 
-    <div class="image-container">
-      <div class="image-half"><img src="/images/tender_protector_female.jpg" alt="Tender Protector Female" /></div>
-      <div class="divider"></div>
-      <div class="image-half"><img src="/images/tender_protector_male.jpg" alt="Tender Protector Male" /></div>
+  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+  <h1>Tender Protector</h1>
+  <p class="slogan">You lead with gravity, not volume.</p>
+  <p class="quote">“The deepest pleasure doesn’t come from control. It comes from being trusted with it.” – Anonymous</p>
+
+  <div class="image-container">
+    <div class="image-half">
+      <img src="/images/tender_protector_female.jpg" alt="Tender Protector Female">
     </div>
+    <div class="divider"></div>
+    <div class="image-half">
+      <img src="/images/tender_protector_male.jpg" alt="Tender Protector Male">
+    </div>
+  </div>
 
+  <div class="content-section">
     <h2>Description</h2>
-    <p>You lead with grace, grounding those around you. You’re the kind of partner others surrender to not out of fear, but trust. You’re not just in charge, you’re responsible. When you lead, people feel held, not handled. In dominance psychology, this is called <em>secure authority</em>; you don’t control people, you create space for them to feel free.</p>
+    <p>You lead with grace, grounding those around you. You’re the kind of partner others surrender to not out of fear, but trust. You’re not just in charge, you’re responsible. When you lead, people feel held, not handled. In dominance psychology, this is called secure authority, you don’t control people, you create space for them to feel free.</p>
+  </div>
 
+  <div class="content-section">
     <h2>Power Dynamic Arc</h2>
-    <p><strong>Relationship Trajectory:</strong> Tender Protectors are stable dominants. Their leadership is grounded in emotional attunement rather than ego. They are least likely to initiate polarity shifts unless it’s to recalibrate for the sake of their partner’s well-being.</p>
     <ul>
       <li>Dominant stays dominant → 📈 Stable upward trend</li>
-      <li class="sub">Healthy, long-term dynamic. Emotional security and trust deepen over time.</li>
+      <li class="indented">Healthy, long-term dynamic. Emotional security and trust deepen over time.</li>
       <li>Submissive partner becomes dominant → 📉 Steep drop</li>
-      <li class="sub">Tender Protector becomes emotionally destabilized. Role confusion sets in.</li>
+      <li class="indented">Tender Protector becomes emotionally destabilized. Role confusion sets in.</li>
       <li>Tender Protector temporarily softens (but remains dominant) → 📊 Gentle correction</li>
-      <li class="sub">Creates space for intimacy while maintaining control.</li>
+      <li class="indented">Creates space for intimacy while maintaining control.</li>
       <li>Tender Protector becomes submissive → 🚨 Crash</li>
-      <li class="sub">Total polarity collapse. Loss of self-identity. Relationship likely to fail.</li>
+      <li class="indented">Total polarity collapse. Loss of self-identity. Relationship likely to fail.</li>
     </ul>
     <p><strong>Ideal Dynamic:</strong> A gentle but firm dominance paired with a devoted or emotionally attuned submissive creates the most secure and satisfying connection. Think “earned trust” rather than strict control.</p>
-
+  </div>
+    <div class="content-section">
     <h2>Origins of Desire</h2>
     <ul>
       <li><strong>Evolutionary Biological Theory:</strong> Their desire to protect is tied to deep-rooted evolutionary traits. They’re wired to safeguard those they care for.</li>
       <li><strong>Self-Esteem Theory:</strong> They gain sexual confidence through being trusted. The more they are relied on, the more potent they feel.</li>
-      <li><strong>Imprintation Theory:</strong> Early arousal may have been linked to moments of comforting or rescuing, cementing a lifelong erotic association with care.</li>
-      <li><strong>Blank Slate Theory:</strong> Many were taught to “be strong.” Arousal becomes tied to leading gently and being needed.</li>
+      <li><strong>Imprintation Theory:</strong> Early arousal may have been tied to moments of comforting or rescuing—cementing a lifelong erotic association with care.</li>
+      <li><strong>Blank Slate Theory:</strong> Many were taught to “be strong” or “keep it together,” so arousal becomes tied to leading gently and being needed.</li>
     </ul>
+  </div>
 
+  <div class="content-section">
     <h2>Turn-On Vocabulary</h2>
     <ul>
       <li>“I feel so safe with you.”</li>
@@ -169,7 +163,9 @@
       <li>“Thank you for looking out for me.”</li>
       <li>“I’m all yours.”</li>
     </ul>
+  </div>
 
+  <div class="content-section">
     <h2>Conflict Pattern</h2>
     <p><strong>Tendencies During Conflict:</strong></p>
     <ul>
@@ -178,30 +174,32 @@
       <li>Feels hurt when their care isn’t appreciated</li>
       <li>May withdraw if they feel unappreciated</li>
     </ul>
-        <p><strong>Triggers:</strong></p>
+    <p><strong>Triggers:</strong></p>
     <ul>
       <li>Being perceived as controlling</li>
       <li>Their care being misinterpreted as manipulation</li>
       <li>Partner acting recklessly or making decisions without them</li>
     </ul>
-
     <p><strong>Resolution Style:</strong></p>
     <ul>
       <li>Needs open appreciation and verbal reassurance</li>
       <li>Responds best to “I know you were trying to protect me” rather than defensiveness</li>
       <li>Calms down quickly once their intentions are validated</li>
     </ul>
-
     <p><strong>Growth Edge:</strong></p>
     <ul>
       <li>Learning to express their own needs instead of only prioritizing others’</li>
       <li>Asking rather than assuming what the partner needs</li>
     </ul>
+  </div>
 
+  <div class="content-section">
     <h2>Erotic Edge & Drop</h2>
-    <p><strong>Erotic Edge:</strong> They create emotional safewords. What others crave is how deeply attuned they are — how they can command while still being gentle, read their partner’s breath, and provide security even while being intense. Their superpower is empathic dominance.</p>
+    <p><strong>Erotic Edge:</strong> They create emotional safewords. What others crave is how deeply attuned they are—how they can command while still being gentle, read their partner’s breath, and provide security even while being intense. Their superpower is empathic dominance.</p>
     <p><strong>Erotic Drop (Dealbreaker):</strong> Being disrespected, mocked, or treated like they’re weak for being emotionally available. They shut down instantly if their care is mistaken for weakness or control.</p>
+  </div>
 
+  <div class="content-section">
     <h2>Erotic Short Story</h2>
     <div class="story">
       <p>You close the door behind you, locking it with a soft click. The sound settles into the quiet like a promise.</p>
@@ -258,7 +256,6 @@
       Even when they’re at their most exposed.</p>
       <p><strong>Especially then.</strong></p>
       <p>Because that’s when it matters most.</p>
-    </div>
   </div>
 </body>
 </html>
