--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -105,7 +105,7 @@
 </head>
 <body>
 
- <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+   <img src="/assets/le-libido-logo.svg" alt="Le Libido Logo" class="logo" />
   <h1>Tender Protector</h1>
   <p class="slogan">You lead with gravity, not volume.</p>
   <p class="quote">“The deepest pleasure doesn’t come from control. It comes from being trusted with it.” – Anonymous</p>
