--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -2,53 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Tender Protector – Erotic Blueprint</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap" rel="stylesheet">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"/>
+
   <style>
+    :root {
+      --blue: #064D95;
+      --gold: #e1bf78;
+      --offWhite: #e6e6e6;
+    }
+
+    * { box-sizing: border-box; }
+    html, body { margin: 0; padding: 0; }
     body {
-      background-color: #064D95;
+      background-color: var(--blue);
+      color: var(--offWhite);
       font-family: 'Montserrat', sans-serif;
-      color: white;
-      margin: 0;
-      padding: 0 2rem 2rem;
-      border: 8px solid #e1bf78;
-      box-shadow: 0 0 10px #e1bf78;
+      line-height: 1.55;
+      border: 8px solid var(--gold);
+      box-shadow: 0 0 10px var(--gold);
+    }
+
+    .wrapper {
+      padding: 3rem 1.1rem 3rem;
     }
 
     .logo {
-      max-width: 120px;
-      margin: 0 auto 10px;
       display: block;
+      max-width: 120px;
+      margin: 0 auto 1.3rem;
+      filter: drop-shadow(0 0 4px var(--gold));
     }
 
     h1 {
+      font-size: 2.7rem;
+      font-weight: 700;
       font-style: italic;
-      font-weight: bold;
-      color: white;
       text-align: center;
-      font-size: 2.5rem;
+      color: #fff;
       text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
-      margin-top: 10px;
+      margin: 0.2rem 0 0.8rem;
     }
 
-    .slogan {
+    h2 {
+      font-size: 1.6rem;
+      font-style: italic;
+      color: var(--gold);
+      margin: 2.4rem 0 0.6rem;
+      text-shadow: 0 0 4px var(--gold);
+    }
+
+    .slogan, .quote {
       font-style: italic;
       text-align: center;
-      font-size: 1.2rem;
-      margin: 0.5rem 0;
-      color: #d0d0d0;
+      color: #d2d2d2;
+      margin: 0.2rem 0 1.6rem;
     }
 
     .quote {
-      color: #bbbbbb;
-      font-style: italic;
-      text-align: center;
-      margin-bottom: 2rem;
+      margin-top: -0.4rem;
     }
 
     .image-container {
-      border: 4px solid #e1bf78;
+      border: 4px solid var(--gold);
       border-radius: 12px;
       overflow: hidden;
       display: flex;
@@ -56,7 +75,8 @@
       align-items: stretch;
       width: 100%;
       max-width: 700px;
-      margin: 0 auto 30px auto;
+      margin: 0 auto 2.2rem;
+      box-shadow: 0 0 7px var(--gold);
     }
 
     .image-half {
@@ -74,54 +94,41 @@
 
     .divider {
       width: 4px;
-      background-color: #e1bf78;
+      background-color: var(--gold);
     }
 
-    .content-section {
-      margin-bottom: 2rem;
+    ul {
+      padding-left: 1.25rem;
+      margin: 0.6rem 0;
     }
 
-    .content-section h2 {
-      font-size: 1.6rem;
+    li {
+      margin-bottom: 0.45rem;
+    }
+
+    .sub {
+      margin-left: 0.8rem;
       font-style: italic;
-      color: #e1bf78;
-      margin-bottom: 0.5rem;
+      color: #c7c7c7;
     }
 
-    .content-section ul {
-      padding-left: 1.5rem;
-    }
-
-    .content-section li {
-      margin-bottom: 0.5rem;
-    }
-
-    .indented {
-      padding-left: 1rem;
-      color: #dddddd;
-      font-style: italic;
+    .story p {
+      margin: 0 0 1.1rem;
     }
   </style>
-  .wrapper {
-  padding: 3rem 1.1rem 3rem;
-}
 </head>
 <body>
+  <div class="wrapper">
+    <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+    <h1><strong><em>Tender Protector</em></strong></h1>
+    <p class="slogan">You lead with gravity, not volume.</p>
+    <p class="quote">“The deepest pleasure doesn’t come from control. It comes from being trusted with it.” – Anonymous</p>
 
-  <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
-  <h1>Tender Protector</h1>
-  <p class="slogan">You lead with gravity, not volume.</p>
-  <p class="quote">“The deepest pleasure doesn’t come from control. It comes from being trusted with it.” – Anonymous</p>
-
-  <div class="image-container">
-    <div class="image-half">
-      <img src="/images/tender_protector_female.jpg" alt="Tender Protector Female">
+    <div class="image-container">
+      <div class="image-half"><img src="/images/tender_protector_female.jpg" alt="Tender Protector Female" /></div>
+      <div class="divider"></div>
+      <div class="image-half"><img src="/images/tender_protector_male.jpg" alt="Tender Protector Male" /></div>
     </div>
-    <div class="divider"></div>
-    <div class="image-half">
-      <img src="/images/tender_protector_male.jpg" alt="Tender Protector Male">
-    </div>
-  </div>
 
   <div class="content-section">
     <h2>Description</h2>
