--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -262,7 +262,7 @@
       <p>Even when you’re making them moan.<br/>
       Even when you’re causing them to squirm in ecstasy.<br/>
       Even when they’re at their most exposed.</p>
-      <p><strong>Especially then.</strong></p>
+      <p>Especially then.</p>
       <p>Because that’s when it matters most.</p>
   </div>
 </body>
