--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -105,10 +105,13 @@
     }
 
     .sub {
-      margin-left: 0.8rem;
-      font-style: italic;
-      color: #c7c7c7;
-    }
+  margin-left: 1.4rem;
+  font-style: italic;
+  color: #c7c7c7;
+  list-style: none;
+  padding-left: 1rem;
+  text-indent: -1rem;
+}
 
     .story p {
       margin: 0 0 1.1rem;
@@ -135,16 +138,17 @@
 
   <div class="content-section">
     <h2>Power Dynamic Arc</h2>
-    <ul>
-      <li>Dominant stays dominant → 📈 Stable upward trend</li>
-      <li class="indented">Healthy, long-term dynamic. Emotional security and trust deepen over time.</li>
-      <li>Submissive partner becomes dominant → 📉 Steep drop</li>
-      <li class="indented">Tender Protector becomes emotionally destabilized. Role confusion sets in.</li>
-      <li>Tender Protector temporarily softens (but remains dominant) → 📊 Gentle correction</li>
-      <li class="indented">Creates space for intimacy while maintaining control.</li>
-      <li>Tender Protector becomes submissive → 🚨 Crash</li>
-      <li class="indented">Total polarity collapse. Loss of self-identity. Relationship likely to fail.</li>
-    </ul>
+<p><strong>Relationship Trajectory:</strong> Tender Protectors are stable dominants. Their leadership is grounded in emotional attunement rather than ego. They are least likely to initiate polarity shifts unless it’s to recalibrate for the sake of their partner’s well-being.</p>
+<ul>
+  <li>Dominant stays dominant → 📈 Stable upward trend</li>
+  <li class="sub">Healthy, long-term dynamic. Emotional security and trust deepen over time.</li>
+  <li>Submissive partner becomes dominant → 📉 Steep drop</li>
+  <li class="sub">Tender Protector becomes emotionally destabilized. Role confusion sets in.</li>
+  <li>Tender Protector temporarily softens (but remains dominant) → 📊 Gentle correction</li>
+  <li class="sub">Creates space for intimacy while maintaining control.</li>
+  <li>Tender Protector becomes submissive → 🚨 Crash</li>
+  <li class="sub">Total polarity collapse. Loss of self-identity. Relationship likely to fail.</li>
+</ul>
     <p><strong>Ideal Dynamic:</strong> A gentle but firm dominance paired with a devoted or emotionally attuned submissive creates the most secure and satisfying connection. Think “earned trust” rather than strict control.</p>
   </div>
     <div class="content-section">
